compiler/fir/analysis-tests/testData/resolve/diagnostics/constructorInInterface.kt
interface A<!CONSTRUCTOR_IN_INTERFACE!>(konst s: String)<!>

interface B <!CONSTRUCTOR_IN_INTERFACE!>constructor(konst s: String)<!>

interface C {
    <!CONSTRUCTOR_IN_INTERFACE!>constructor(s: String)<!> {}
}
